added a new post about react's useEffect

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 			<a href="Resume.pdf">my resume</a>
 			<div id="linkContainer">
 				<a href="firstpost.html">first post :)</a>
+				<a href="secondpost.html">second post. About useEffect and closures in React.</a>
 			</div>
 	</body>
 </html>
