changed current to correct

--- a/secondpost.html
+++ b/secondpost.html
@@ -69,7 +69,7 @@ function Component() {
         <p>
           So instead of referring to an old closures version of <i>lst</i>,
           we use the current state of <i>lst</i> (currentLst), to update our state
-          which leads to a current list that includes the numbers 1-5.
+          which leads to a correct list that includes the numbers 1-5.
         </p>
       </div>
     </div>
